# mqtt_adapt

./: .gitignore  Cargo.toml  README.md  docs.md  hotspot_analysis.md  mqtt_adapt.db  test_auth_mqtt_adapt.db  test_mqtt_adapt.db
.github/workflows/: ci.yml
benches/: performance.rs
migrations/: 001_create_retained_messages_table.sql  002_create_session_tables.sql
src/: lib.rs  main.rs  server.rs  topic.rs
src/client/: builder.rs  client.rs  connection.rs  handler.rs  mod.rs
src/db/: connection.rs  mod.rs  session_manager.rs
src/db/models/: ag_user.rs  mod.rs  retained_message.rs  session.rs
src/mq/: client.rs  consumer.rs  device_data.rs  factory.rs  message.rs  mod.rs  producer.rs  service.rs  thread_pool.rs  topic_resolver.rs
src/protocol/: connack.rs  connect.rs  disconnect.rs  mod.rs  parser.rs  ping.rs  pingreq.rs  pingresp.rs  puback.rs  pubcomp.rs  publish.rs  pubrec.rs  pubrel.rs  serializer.rs  suback.rs  subscribe.rs  tests.rs  types.rs  unsuback.rs  unsubscribe.rs
src/routing/: channel.rs  event.rs  mod.rs  qos.rs  router.rs
tests/: client_test.rs  message_router.rs  protocol_parse.rs  protocol_test.rs  topic_manager.rs  topic_manager_lock_free.rs
