[package]
name = "mqtt_adapt"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
nom = "7.1"
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = "0.3"
anyhow = "1.0"
flume = "0.11"
libc = "0.2.181"
num_cpus = "1.17.0"
mimalloc = { version = "0.1", features = ["override"] }

[dev-dependencies]
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = "0.24"
rand = "0.10.0"

[[bench]]
name = "performance"
harness = false
